# LLM-Based-Security-Chatbot-for-incident-Response-Multi-Agent

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  sec_copilot.db  tailwind.config.js
app/: config.py  db.py  main.py  models.py
app/api/routers/: auth.py  chat.py  data.py
app/security/: auth.py
app/ui/web/: app.js  auth.html  index.html  reset.html  style.css
app/ui/web/components/: footer.html  form.html  header.html  steps.html
policies/: tool_allowlist.yaml
src/agents/: attacker.py  base.py  decider.py  defender.py  intel_analyst.py  toolsmith.py
src/orchestrator/: blackboard.py  coordinator.py  planner.py  policies.py  trace.py
tailwind/: input.css
